# rankhaus

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: README.md
.github/workflows/: ci.yml  release.yml
docs/: PROGRESS.md  THE-PLAN.md  WORKSPACE_SETUP.md
docs/adr/: 001-core-architecture-and-data-model.md
rankhaus/: Cargo.toml
rankhaus-cli/: Cargo.toml  test_items.rankset  test_users.rankset
rankhaus-cli/src/: main.rs  repl.rs  state.rs
rankhaus-cli/src/commands/: init.rs  items.rs  load.rs  mod.rs  rank.rs  ranksets.rs  sessions.rs  strategy.rs  users.rs
rankhaus-cli/tests/: integration_test.rs
rankhaus/src/: error.rs  id.rs  item.rs  lib.rs  list.rs  ranking.rs  rankset.rs  session.rs  strategy.rs  user.rs
rankhaus/src/strategy/: merge.rs  quicksort.rs
ranksets/: README.md  colors.rankset  dc-superheroes.rankset  default-test.rankset  ice-cream-flavors.rankset  jeep-models.rankset  marvel-superheroes.rankset  movies-classic.rankset  nfl-teams.rankset  pizza-toppings.rankset  programming-languages.rankset  seasons.rankset  star-wars-movies.rankset  text-editors.rankset  trees.rankset
