[workspace]
resolver = "2"
members = [
    "rankhaus",
    "rankhaus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Steve Wagner (ciroque@live.com)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciroque/rankhaus"

[workspace.dependencies]
# Shared dependencies across workspaces
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI/TUI dependencies
dialoguer = "0.11"
inquire = "0.7"

# Testing dependencies
proptest = "1.4"

# Utilities
rand = "0.9"
