[package]
name = "rankhaus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["merge"]
merge = []
elo = []
tournament = []
condorcet = []
active = []
btm = []
